updated sliderpage title

--- a/slider.html
+++ b/slider.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
         <link rel="stylesheet" href="assets/css/slide.css">
         <script src="assets/js/script.js" defer></script>
-        <title>Slider</title>
+        <title>SliderPage</title>
     </head>
     <body>
       <header class="header">
